Bug 898321 - Return success from nsTableEditor::GetCellAt if frame not found; r=ehsan

Adjusted by Aryeh Gregor for review comments.